fixed bug with years not showing up

--- a/themes/connectmasstapp/sass/screen.scss
+++ b/themes/connectmasstapp/sass/screen.scss
@@ -2361,7 +2361,7 @@ ul.event-instances li {
     opacity: 0;
     transition: opacity 0.2s ease;
 }
-ul.event-instances li.visible {
+ul.event-instances.visible li {
   opacity: 1
 }
 .event-instances li div span.event-title a:hover:after {
